--- a/index.html
+++ b/index.html
@@ -4,12 +4,85 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/media.css">
 </head>
 <body>
+	<header class="header" id="header">
+		<div class="container">
+			<div class="header__inner">
+				<div class="header__top">
+					<div class="header__top-langue">
+						<button class="header__top-btn header__top-btn--active" type="button">
+							EN
+						</button>
+						<button class="header__top-btn" type="button">
+							RU
+						</button>
+						<button class="header__top-btn" type="button">
+							ESP
+						</button>
+					</div>
+					<a href="#" class="header__top-onlain">
+						Online ordering
+					</a>
+				</div>
+				<div class="header__bottom">
+					<nav class="menu">
+						<ul class="menu__item">
+							<li class="menu__list">
+								<a href="#" class="menu__link">
+									ABOUT
+								</a>
+							</li>
+							<li class="menu__list">
+								<a href="#" class="menu__link">
+									Menus
+								</a>
+							</li>
+							<li class="menu__list">
+								<a href="#" class="menu__link">
+									Service Info
+								</a>
+							</li>
+						</ul>
+					</nav>
+					<a href="#" class="header__logo">
+						<span class="logo-span">NYC'S</span>
+						<img src="images/logo.png" alt="TimeOne" width="212" height="89">
+						<span class="logo-span">Catering</span>
+					</a>
+					<nav class="menu">
+						<ul class="menu__item menu__item_left">
+							<li class="menu__list">
+								<a href="#" class="menu__link">
+									Gallery
+								</a>
+							</li>
+							<li class="menu__list">
+								<a href="#" class="menu__link">
+									Friends
+								</a>
+							</li>
+							<li class="menu__list">
+								<a href="#" class="menu__link">
+									Contact
+								</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+				
+			</div>
+		</div>
+	</header>
+
+	
 	
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="js/main.js"></script>
