added two section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,33 @@
 		</div>
 	</header>
 
+
+	<section class="private" id="private">
+
+		<div class="private__inner">
+			<div class="private__img">
+				<img src="images/two-section.jpg" alt="">
+			</div>
+			<div class="private__content">
+				<h1 class="private__title">
+					Private catering
+				</h1>
+				<p class="private-text">
+					Treat your guests to a beautifully plated dinner, hand-crafted canapes or a casual BBQ.
+				</p>
+				<div class="private-btn">
+					<button class="private-btn__btn btn" type="button">
+						Get a quote
+					</button>
+					<button class="private-btn__btn private-btn__btn_nocolor btn" type="button">
+						View menus
+					</button>
+				</div>
+			</div>
+		</div>
+
+	</section>
+
 	
 	
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
