added section choose

--- a/index.html
+++ b/index.html
@@ -192,6 +192,20 @@
       </div>
     </div>
   </section>
+  <section class="choose" id="choose">
+    <div class="choose__inner">
+      <div class="choose-content choose-wrap">
+        <div class="title">
+          <h1 class="choose-content__title">
+            Why CHOOSE us?
+          </h1>
+        </div>
+      </div>
+      <div class="choose-img choose-wrap">
+        <img class="choose-img__img" src="images/choose.jpg" alt="">
+      </div>
+    </div>
+  </section>
   
   
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
